fix color dark mode flashcard page

--- a/src/app/groceries/grocery-item-flashcard/grocery-item-flashcard.component.css
+++ b/src/app/groceries/grocery-item-flashcard/grocery-item-flashcard.component.css
@@ -6,7 +6,6 @@
     border-radius: 10;
     width: 80%;
     padding: 1;
-    background-color: var(--dark-text-color);
 }
 
 .card {
@@ -14,8 +13,11 @@
     width: 100%;
     border-radius: 10;
     border-width: 1;
-    /* background-color: var(--color-blue); */
-    border-color: var(--color-blue);
+    border-color: var(--dark-secondary);
+}
+
+.ns-dark.card {
+    border-color: var(--dark-text-color);
 }
 
 .controls {
@@ -23,9 +25,12 @@
     margin-bottom: 25;
     padding: 20;
     border-width: 1;
-    border-color: var(--color-blue);
-    /* background-color: var(--light-primary); */
+    border-color: var(--dark-secondary);
     border-radius: 10;
+}
+
+.ns-dark.controls {
+    border-color: var(--dark-text-color);
 }
 
 Button {
